--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,17 +3,17 @@
  <div class="container">
      <header class="jumbotron">
          <div class="container">
-             <h1>Welcome To YelpCamp!</h1>
-             <p>View our hand-picked campgrounds from all over the world</p>
+             <h1 class="Campground-Title">Welcome To YelpCamp!</h1>
+             <p class="Campground-Text">View our hand-picked campgrounds from all over the world</p>
              <p>
-                <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Campground</a>
+                <a class="Campground-Button" href="/campgrounds/new">Add New Campground</a>
              </p>
          </div>
      </header>
      
      <div class="row text-center" style="display:flex; flex-wrap: wrap;">
         <% campgrounds.forEach(function(campground){ %>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-sm-6">
                 <div class="thumbnail">
                    <img src="<%= campground.image %>">
                    <div class="caption">
