--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,9 +1,11 @@
 <% include partials/header %>
+<section class="Landing-Page">
+<div class="Landing-Background">
+    
+<h1 class="Landing-H1">Yelp Camp</h1>
+<a href="/campgrounds" class="btn-landing">View All Campgrounds</a>
+</div>
+</section>
 
-<h1>Landing Page!</h1>
-
-<p>Welcome to YelpCamp</p>
-
-<a href="/campgrounds">View All Campgrounds</a>
 
 <% include partials/footer %>
