UI Overhaul. Made more mobile friendly

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,11 +1,12 @@
 <% include partials/header %>
-<section class="Landing-Page">
-<div class="Landing-Background">
-    
-<h1 class="Landing-H1">Yelp Camp</h1>
-<a href="/campgrounds" class="btn-landing">View All Campgrounds</a>
-</div>
-</section>
+
+
+<header class="bg-image" id="landing-header">
+  <div class="landing-container">
+    <h1 class="landingh1">Yelp  Camp</h1>
+    <a href="/campgrounds" class="btn-landing">Adventure Now!</a>
+  </div>
+</header>
 
 
 <% include partials/footer %>
