--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,26 @@
 <% include ./partials/header %> 
-<div class="LoginRegister-Background">
-<h1 class="LoginRegister-Text">Sign Up!</h1>
-<div class="LoginRegister-Form">
-<form action="/register" method="post">
-    <input type="text" name="username" placeholder="Username">
-    <input type="password" name="password" placeholder="Password">
-    <button class="Submit-Button">Sign Up</button>
-</form>
+
+
+<div class="loginregister-bg">
+<div class="login-form">
+    <form action="/register" method="POST">
+		<div class="avatar">
+			<!--<img src="https://banner2.kisspng.com/20180325/eiw/kisspng-silhouette-royalty-free-photography-avatar-5ab752dad42328.1073123915219637388689.jpg" alt="Avatar">-->
+		</div>
+        <h2 class="text-center">Registration</h2>   
+        <div class="form-group">
+        	<input type="text" class="form-control" name="username" placeholder="Username" required="required">
+        </div>
+		<div class="form-group">
+            <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+        </div>        
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Register!</button>
+        </div>
+    </form>
+    <p class="text-center small">Check out the campgrounds:  <a href="/campgrounds">View Campgrounds</a></p>
 </div>
 </div>
+<!--Add Login/Register With Google+/Facebook buttons (non functional)-->
+
 <% include ./partials/footer %> 
