--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+/*MAKE SURE EVERYTHING WORKS ON ALL BROWERS NOT JUST CHROME (FOR LATER UPDATES)*/
 
+body{
+    background-color: white;
+}
 
 .thumbnail img {
     width: 100%;
+    height: 100%;
 }
 
 .thumbnail {
@@ -11,7 +16,7 @@
 }
 
 .thumbnail .caption-full {
-    padding: 9px;
+    padding: px;
 }
 
 #delete-form {
@@ -19,112 +24,158 @@
 }
 
 
-.navbar-default .navbar-brand{
-    z-index: 1;
-    color: white;
-    font-size: 30px;
-    font-family: 'Roboto Condensed', sans-serif;
+/*HEADER*/
+.navbar-default{
+        font: 20px 'Roboto Condensed', sans-serif;
+        color: black;
 }
 
-.navbar-default .navbar-nav>li>a{
-    z-index: 1;
-    color: white;
-    font-size: 15px;
-    font-family: 'Roboto Condensed', sans-serif;
+
+.navbar{
+        font: 15px 'Roboto Condensed', sans-serif;
+
 }
 
-.container-fluid{
-    background-color: #4286f4;
+
+.nav>ul>li{
+        color:black;
 }
 
-.Landing-Page{
-    z-index: 1;
-    display: relative;
-    position: relative;
-    justify-content: center;
-    text-align: center;
-    min-height: 100vh;
-    color: black;
-}
+/*LANDING PAGE*/
 
-.Landing-Background{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding-top: 23%;
-    width: 100%;
-    height: 100%;
+#landing-header{
+    font: 25px 'Roboto Condensed', sans-serif;
+    height:94.6vh;
+    margin-top: -21px;
+    color:white;
+    background-image: url(https://images.unsplash.com/photo-1521064243942-224549f23d65?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d42aa5f406790d133d6151f72d50c3a2&auto=format&fit=crop&w=1350&q=80);
     background-size: cover;
+    padding: 30rem 0;
+    text-align:center;
+    position: relative;
     z-index: 1;
-    background-image: url(https://images.unsplash.com/photo-1500332988905-1bf2a5733f63?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5aa69359b6bf43aa641188a50da23a4b&auto=format&fit=crop&w=1350&q=80);
-    background-position: 0px 0px;
+    overflow: hidden;
+    filter: blur(.6px);
 }
 
-.Landing-H1{
-    font: bold 70px 'Roboto Condensed', sans-serif;
-    text-indent: 1.25%;
-    text-align:center;
-    word-spacing: 20px;
-    color: white;
-    padding-bottom: 15px;
-height: center;
+.landingh1{
+    font: 70px 'Roboto Condensed', sans-serif;
 }
 
 .btn-landing{
-    opacity:0;
-    padding: 20px 46px;
-    margin-top:100px;
-    margin-bottom:20px;
-    background-color: #4c5e7c;
-    color: white;
-    border: 1.5px solid white;
-    font-size: 33px;
-    animation: 1s slidefade 1s forwards;
+    opacity: 1;
+    padding: 10px 35px;
+    border: 1.5px solid;
+    font-size: 22px;
+    cursor: pointer;
+    -webkit-animation: 1s slidefade 1s forwards;
+    -moz-animation: 1s slidefade 1s forwards;
+    color: black;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .btn-landing:hover{
-    background-color:#192b49;
-    color: white;
-}
-
-@keyframes slidefade{
-    100%{
-        opacity:1;
-    }
-}
-
-
-.LoginRegister-Background{
-    height: 100vh;
-    background-color:#cedbef;
-}
-
-.LoginRegister-Text{
-    font: bold 50px 'Roboto Condensed', sans-serif;
-    text-align: center;
-    color:black;
-}
-
-.LoginRegister-Form{
-padding-left:44%;
-    padding-top: 14%;
-    top:30%;
-    width:25%;
-    font-size: 20px;
-    resize:vertical;
-    border-radius: 8px;
-}
-
-.Submit-Button{
-    background-color:green;
-    border-radius: 8px;
-    border: 0px;
-    width:245px;
+    border: 0px solid;
+    text-decoration: none;
+    background-color:#8e8023;
     color:white;
+    transition:0.35s ease-in;
 }
-.Submit-Button:hover{
-    opacity:0.7;
+
+
+.landing-container{
+  margin: 0 auto;
+  width: 90%;
+  max-width: 900px;
 }
+
+/*Login*/
+
+.loginregister-bg{
+    height: 92.4vh;
+    color: #fff;
+		background: #d47677;
+}
+
+.form-control {
+        min-height: 41px;
+		background: #fff;
+		box-shadow: none !important;
+		border-color: #e3e3e3;
+	}
+	.form-control:focus {
+		border-color: #70c5c0;
+	}
+    .form-control, .btn {        
+        border-radius: 2px;
+    }
+	.login-form {
+		width: 350px;
+		margin: 0 auto;
+		padding: 100px 0 30px;		
+	}
+	.login-form form {
+		color: #7a7a7a;
+		border-radius: 2px;
+    	margin-bottom: 15px;
+        font-size: 13px;
+        background: #ececec;
+        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+        padding: 30px;	
+        position: relative;	
+    }
+	.login-form h2 {
+		font-size: 22px;
+        margin: 35px 0 25px;
+    }
+	.login-form .avatar {
+		position: absolute;
+		margin: 0 auto;
+		left: 0;
+		right: 0;
+		top: -50px;
+		width: 95px;
+		height: 95px;
+		border-radius: 50%;
+		z-index: 9;
+		background: #70c5c0;
+		padding: 15px;
+		box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+	}
+	.login-form .avatar img {
+		width: 100%;
+	}	
+    .login-form input[type="checkbox"] {
+        margin-top: 2px;
+    }
+    .login-form .btn {        
+        font-size: 16px;
+        font-weight: bold;
+		background: #70c5c0;
+		border: none;
+		margin-bottom: 20px;
+    }
+	.login-form .btn:hover, .login-form .btn:focus {
+		background: #50b8b3;
+        outline: none !important;
+	}    
+	.login-form a {
+		color: #fff;
+		text-decoration: underline;
+	}
+	.login-form a:hover {
+		text-decoration: none;
+	}
+	.login-form form a {
+		color: #7a7a7a;
+		text-decoration: none;
+	}
+	.login-form form a:hover {
+		text-decoration: underline;
+	}
+
+
 
 /*Camgrounds*/
 .Campground-Button{
