--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale-1">
         <title>YelpCamp</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
     </head>
     <body>
+        
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -14,8 +17,8 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <% if(!currentUser){ %>
-                        <li class="header-btn"><a href="/login">Login</a></li>
-                        <li class="header-btn"><a href="/register">Sign Up</a></li>
+                        <li><a href="/login">Sign In!</a></li>
+                        <li><a href="/register">Sign Up!</a></li>
                     <% } else { %>
                         <li><a href="#">Signed In As <%= currentUser.username %></a></li>
                         <li><a href="/logout">Logout</a></li>
@@ -24,6 +27,8 @@
             </div>
         </div>
     </nav>
+    
+    
     
     <div class="container">
         
